--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="etude" id="etude">
                 <h1>&Eacuteducation</h1>
                 <div class="parag">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat provident, est ducimus neque aliquam magnam autem quae
-                         culpa perspiciatis tempore doloremque minus? Neque minus mollitia, eius explicabo quod dolores corrupti.</p>
+                    <p>Je suis actuellement en première année d'études en informatique, où 
+                        j'acquiers des compétences en programmation, en algorithmique et en développement de solutions logicielles.</p>
                 </div>
                 <div class="objectif">
                     <div class="type">
